# lpp_eval

./: .gitignore  Dockerfile  app.py  eval.py  extract.bash  grader.py  models.py  pyproject.toml  runner.py  scheduler.py  score.py  submission.py  testcases.py  tmpl.py
docker/: extract.bash
lpp_eval/: config.py  queue.py
lpp_eval/runner/: __init__.py  test_runner.py
templates/: deadlines.html  detail.html  grading.html  grading_table.html  index.html  students.html  summary.jinja2  testcase.jinja2
